--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "2.8.0",
     "core-js": "^3.14.0",
     "vue": "^2.6.14",
+    "vue-chartjs": "3.4.2",
     "vuetify": "^2.5.3"
   },
   "devDependencies": {
