--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@femessage/log-viewer": "^1.5.0",
     "chart.js": "2.8.0",
     "core-js": "^3.14.0",
     "vue": "^2.6.14",
